--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>twitter-kafka-producer</module>
         <module>twitter-storm-topology</module>
+        <module>kafka-mongodb-consumer</module>
     </modules>
 
 
